# reactiveprogrammingss2017

./: .gitignore
ueb1/: README.md  server.cabal
ueb1/.stack-work/install/x86_64-osx/lts-8.4/8.0.2/flag-cache/: SHA-1.6.4.2-6ZuKopcglGG4yoCGsd9koJ  aeson-1.0.2.1-1PgNnQdZpa7BG8cq9P3bMU  aeson-pretty-0.8.2-462yIiWLrrZ6FTUM1Vu54B  ansi-terminal-0.6.2.3-4HPxin1iv6RAndS8lH3nzo  ansi-wl-pprint-0.6.7.3-3GSHFrIr1fs45bsgKkZbLF  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  async-2.1.1-4n6HEMPJR2eJK0JpvCfuPK  attoparsec-0.13.1.0-HCAgpBrKCLJ5li8FbfXxE1  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.1-B9geVZFtCvE8ERS7UcvkRz  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  blaze-builder-0.4.0.2-CGB8BvrFgghHy5bLy0SFOg  (+63 more)
ueb1/Code/: server.cabal  stack.yaml
ueb1/Code/client/assets/: client.js  client.js.map  index.html
ueb1/Code/client/src/main/scala/: Main.scala  Maze.scala
ueb1/Code/server/: Codec.hs  Main.hs  Maze.hs
ueb1/Documentation/: ueb1.aux  ueb1.tex
ueb1/client/: build.sbt
ueb1/client/assets/: client.js  client.js.map  style.css
ueb1/client/src/main/scala/: Codec.scala  Main.scala  Maze.scala  Messages.scala
ueb1/server/: Cellular.hs  Main.hs  Maze.hs  Messages.hs
ueb4/: README.md  build.sbt  curried-in-space.cabal  stack.yaml
ueb4/Documentation/: .ueb4.tex.swp  ueb4.aux  ueb4.tex
ueb4/hakka/Hakka/: .Actor.hs.swp  Actor.hs
ueb4/haskell-server/: .Connection.hs.swp  .Main.hs.swp  .Messages.hs.swp  .Universe.hs.swp  Connection.hs  Main.hs  Messages.hs  Universe.hs
ueb4/scala-client/assets/: index.html
ueb4/scala-client/assets/js/: client.js  client.js.map
ueb4/scala-client/src/main/scala/: .Control.scala.swn  .Control.scala.swo  .Control.scala.swp  .Main.scala.swo  .Main.scala.swp  .MessageSocket.scala.swp  .Resources.scala.swp  .SpaceObjects.scala.swn  .SpaceObjects.scala.swo  .SpaceObjects.scala.swp  .SpaceView.scala.swn  .SpaceView.scala.swo  .SpaceView.scala.swp  Animation.scala  Control.scala  Main.scala  MessageSocket.scala  Resources.scala  Sound.scala  SpaceObjects.scala  SpaceView.scala  Util.scala
ueb4/scala-client/src/main/scala/pixijs/: Filters.scala  PIXI.scala  Particles.scala
ueb4/scala-server/src/main/scala/: Connection.scala  Main.scala  Universe.scala
ueb4/scala-shared/shared/src/main/scala/: .Messages.scala.swo  .Messages.scala.swp  .SpaceTypes.scala.swn  .SpaceTypes.scala.swo  .SpaceTypes.scala.swp  .Vector2d.scala.swp  Messages.scala  SpaceTypes.scala  Vector2d.scala
ueb6/: OT.cabal
ueb6/Documentation/: haskell-code.sty  rp.cls  ueb6.aux  ueb6.tex
ueb6/app/: Main.hs  Messages.hs
ueb6/client/: build.sbt
ueb6/client/assets/: client.js.map  index.html  style.css
ueb6/client/src/main/scala/: Editor.scala  Main.scala  Messages.scala  OT.scala  Util.scala
ueb6/src/: OT.hs
(+63 files in other folders)
