name:                OT
version:             0.1.0
synopsis:            Haskell Implementation of Operational Transformation
-- description:
homepage:            https://github.com/githubuser/OT#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Ring
maintainer:          martin.ring@dfki.de
copyright:           2017 Martin Ring
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OT
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ot-server
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Messages
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, random, aeson,
                       wai-app-static, warp,
                       websockets, wai-websockets, OT, containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/OT
